@@ -19,7 +19,7 @@ public class DiagonalDifference
                 inputInteger.add(Integer.parseInt(inputArray[j]));
             }
         }
-        result0 = Math.abs(inputInteger.getFirst() + inputInteger.get((inputInteger.size() / 2)) + inputInteger.getLast());
+        result0 = Math.abs(inputInteger.get(0) + inputInteger.get((inputInteger.size() / 2)) + inputInteger.get(inputInteger.size() - 1));
         result1 = Math.abs(inputInteger.get(size - 1) + inputInteger.get((inputInteger.size() / 2)) + inputInteger.get(size * (size - 1)));
         result  = Math.abs(result0 - result1);
         input.close();
